# vanityGen

./: CMakeLists.txt  GUIDE.md  README.md  main.cpp  vcpkg.json
cli/: args.hpp
crypto/: base58.hpp  hex.hpp  keccak256.cpp  keccak256.hpp  random.hpp  ripemd160.hpp  sha256.hpp
output/: exporter.cpp  exporter.hpp
vanity/: matcher.hpp  search.hpp
wallet/: btc_wallet.cpp  btc_wallet.hpp  eth_wallet.cpp  eth_wallet.hpp  sol_wallet.cpp  sol_wallet.hpp  wallet.hpp
